--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     
     <main>
-        <div class="div-4">
+        <div class="left">
             <p><a href="https://www.youtube.com/watch?v=XtPI3YNplR0" target="_blank" class="font-2">OUR LADY OF SORROWS</a></p>
             <p><a href="https://www.youtube.com/watch?v=GTDgMWFsbns" target="_blank" class="font-2">DEMOLITION LOVERS</a></p>
         </div>
